# docs/swagger.json
@@ -7,6 +7,43 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/backupMysql": {
+            "post": {
+                "description": "通过SSH在Linux执行mysqldump并保存到本地SQL目录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "数据库备份接口"
+                ],
+                "summary": "数据库备份",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/result.Result"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "503": {
+                        "description": "Service Unavailable",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/api/failed": {
             "get": {
                 "description": "失败测试接口",
